force-app/main/default/objects/FEC_Country__c/FEC_Country__c.object-meta.xml
<CustomObject>
    <label>Country</label>
    <nameField>
        <label>Country Name Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>