force-app/main/default/objects/FEC_Country__c/fields/FEC_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Country_Code__c</fullName>
    <label>Country Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>