force-app/main/default/objects/FEC_Country__c/fields/FEC_Name_VN__c.field-meta.xml
<CustomField>
    <fullName>FEC_Name_VN__c</fullName>
    <description>Tên quốc gia bằng tiếng việt</description>
    <label>Name VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>